debian/dpkg-doc.postrm: Use doc-name instead of file-name dselect/pkgdisplay.cc: Replace empty string for eflags to a space so gettext doesn't use the translation-info po/update.sh: Generate dselect/helpmsgs.{cc,h} so we can translate them. po/POTFILES.in: add dselect/helpmsgs.cc dselect/pkgtop.cc: use ACS_HLINE instead of `-' dselect/baselist.cc: change colour of column headings dselect: add a new --export mode which suppresses the display of the helpscreen

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 dpkg (1.6.5) unstable; urgency=low
 
   * Don't use \z in dpkg-scansources, Closes: Bug# 53182
+  * Correctly unregister internals manual, Closes: Bug# 53200
+  * dselect helpessages can be translated now, Closes: Bug# 51381
+  * dselect UI tweaks, including a new --expert mode
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
