--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+Wed Dec 22 12:07:40 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * debian/dpkg-doc.postrm: Use doc-name instead of file-name (probably
+    need to change the filename, but I'll be lazy now :)
+  * dselect/pkgdisplay.cc: Replace empty string for eflags to a space
+    so gettext doesn't use the translation-info
+  * po/update.sh: Generate dselect/helpmsgs.{cc,h} so we can translate them.
+  * po/POTFILES.in: add dselect/helpmsgs.cc
+  * dselect/Makefile.in: put helpmsgs.{cc,h} in $(srcdir), since gettext
+    will barf on us if we put them in the builddir. (The real issue here is
+    that when we generate the .po-files we don't know what the builddir will
+    be and gettext can't handle VPATH).
+  * dselect patches from Dan Gohman <gohmandj@mrs.umn.edu>:
+    + dselect/pkgtop.cc: use ACS_HLINE instead of `-'
+    + dselect/baselist.cc: change colour of column headings
+    + dselect: add a new --export mode which suppresses the display of the
+      helpscreen
+
 Tue Dec 21 15:59:35 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-scansoures.pl: don't use \z since that is perl5.005-specific.
