From the ChangeLog   * debian/control: add Build-Depends   * THANKS: new file which lists everyone who contributed to the code   * Change `Debian Linux' to `Debian GNU/Linux' in a couple of manpages   * main/enquiry.c: modify list1package to use the full width of the tty   * Merge patches from Adam Heath:     + lib/mlib.c: new function do_fd_copy to read a file into a fd     + dpkg-deb/build.c: use do_fd_copy     + dpkg-deb/build.c: use dpkg-deb-filelist to reorder files when       building a package     + dpkg-deb/info.c: use do_fd_copy     + lib/showcright.c: use do_fd_copy to read license     + scripts/dpkg-safelist.{1,pl}: new script to reorder a filelist to       make sure symlinks are listed after their targets.     + dpkg-deb/main.c: add -z option to set compression level     + dpkg-deb/build.c: pass new -z options to gzip   * dpkg-deb/dpkg-deb.1: document new -z option

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,26 @@
+Fri Dec 24 15:35:29 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * debian/control: add Build-Depends
+  * THANKS: new file which lists everyone who contributed to the code
+  * Change `Debian Linux' to `Debian GNU/Linux' in a couple of manpages
+  * main/enquiry.c: modify list1package to use the full width of the tty
+  * Merge patches from Adam Heath:
+    + lib/mlib.c: new function do_fd_copy to read a file into a fd
+    + dpkg-deb/build.c: use do_fd_copy
+    + dpkg-deb/build.c: use dpkg-deb-filelist to reorder files when
+      building a package
+    + dpkg-deb/info.c: use do_fd_copy 
+    + lib/showcright.c: use do_fd_copy to read license
+    + scripts/dpkg-safelist.{1,pl}: new script to reorder a filelist to
+      make sure symlinks are listed after their targets. 
+    + dpkg-deb/main.c: add -z option to set compression level
+    + dpkg-deb/build.c: pass new -z options to gzip
+  * dpkg-deb/dpkg-deb.1: document new -z option
+
+Wed Dec 22 13:41:41 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * main/main.c: cleanup printversion
+
 Wed Dec 22 12:07:40 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * debian/dpkg-doc.postrm: Use doc-name instead of file-name (probably
