--- a/dpkg-deb/dpkg-deb.1
+++ b/dpkg-deb/dpkg-deb.1
@@ -60,6 +60,12 @@ appear in the binary package's filesystem archive, but instead
 the files in it will be put in the binary package's control
 information area.
 
+You can specify the compressionlevel used by adding a
+.B \-z#
+option.
+.B dpkg-deb
+will pass that option on to gzip.
+
 Unless you specify
 .BR \-\-nocheck ", " dpkg\-deb "
 will read
