--- a/THANKS
+++ b/THANKS
@@ -10,6 +10,7 @@ Christophe Le Bars <clebars@teaser.fr>
 Colin Plumb
 Dan Gohman <gohmandj@mrs.umn.edu>
 Darren Stalder <torin@daft.com>
+David Huggins-Daines <dhd@eradicator.org>
 Erick Branderhorst <branderhorst@heel.fgg.eur.nl>
 Galen Hazelwood <galenh@debian.org>
 Guy Maor <maor@debian.org>
