--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ dpkg (1.6.5) unstable; urgency=low
   * Use full width of tty in packagelisting, Closes: Bug# 53395
   * Add -z option to dpkg-deb to set compressionlevel when building
     packages, Closes: Bug# 53398
+  * Fix segfaults when producing a diff between current and new conffile,
+    Closes: Bug# 52197
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
@@ -22,7 +24,7 @@ dpkg (1.6.4) unstable; urgency=low
   * Fix architecture-detection in dpkg-gencontrol, Closes: Bug#52616
   * Accept single-number values in update-rc.d, Closes: Bug#46810
 
- -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+ -- Wichert Akkerman <wakkerma@debian.org>  Sun, 19 Dec 1999 16:27:48 +0100
 
 dpkg (1.6.3) unstable; urgency=high
 
