add email address for Scott Barker

--- a/THANKS
+++ b/THANKS
@@ -45,7 +45,7 @@ Raphael Hertzog <rhertzog@hrnet.fr>
 Richard Kettlewell <rjk@sfere.greenend.org.uk>
 Roderick Schertler <roderick@argon.org>
 Roman Hodek <Roman.Hodek@informatik.uni-erlangen.de>
-Scott Barker
+Scott Barker <scott@mostlylinux.ab.ca>
 Tom Lees <tom@lpsg.demon.co.uk>
 Topi Miettinen <Topi.Miettinen@nic.fi>
 Wichert Akkerman <wakkerma@debian.org>
