Fix missing newline in dpkg-deb helpmessage Update changelog for 1.6.5 release

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@ Sat Dec 25 02:50:31 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Oops, forgot to add scripts/dpkg-safefilelist.{1,pl}
   * debian/control: remove double empty line
+  * dpkg-deb/main.c: Fix help-message
 
 Fri Dec 24 17:34:30 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
