--- a/debian/changelog
+++ b/debian/changelog
@@ -12,14 +12,14 @@ dpkg (1.6.5) unstable; urgency=low
   * Fix segfaults when producing a diff between current and new conffile,
     Closes: Bug# 52197
 
- -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+ -- Wichert Akkerman <wakkerma@debian.org>  Sat, 25 Dec 1999 02:53:25 +0100
 
 dpkg (1.6.4) unstable; urgency=low
 
   * No longer byte-compile for emacs
   * Add Swedish translation
   * start-stop-daemon: honour --oknodo if we fail to kill a process
-    Closes: Bug#52580,#52185
+    Closes: Bug#52580,#52185,#52457
   * Fix dselect program description, Closes: Bug#52328
   * Fix architecture-detection in dpkg-gencontrol, Closes: Bug#52616
   * Accept single-number values in update-rc.d, Closes: Bug#46810
