handle 8th bit properly in packagelist-displays

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Dec 25 04:04:48 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * dselect/pkgtop.cc: use waddnstr instead of waddch so we don't strip
+    the 8th bit of characters
+
 Sat Dec 25 02:50:31 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Oops, forgot to add scripts/dpkg-safefilelist.{1,pl}
