--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.6.6) unstable; urgency=low
+
+  * Don't strip 8th bit in dselect packagelists
+
+ -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+
 dpkg (1.6.5) unstable; urgency=low
 
   * Don't use \z in dpkg-scansources, Closes: Bug# 53182
