dselect/pkgtop.cc: use waddnstr instead of waddch so we don't strip the 8th bit of characters Replace `Debian Linux' with `Debian GNU/Linux' in some more places

--- a/doc/ja/dpkg-deb.1
+++ b/doc/ja/dpkg-deb.1
@@ -11,7 +11,7 @@
 .\"WORD:	maintainer script	管理スクリプト
 .\"WORD:	premission		パーミッション
 .\"WORD:	control-file-names	制御ファイル名
-.TH DPKG\-DEB 1 "1st June 1996" "Debian Project" "Debian Linux manual"
+.TH DPKG\-DEB 1 "1st June 1996" "Debian Project" "Debian GNU/Linux manual"
 .SH 名前
 dpkg\-deb \- Debian パッケージアーカイブ(.deb) 操作ツール
 .SH 書式
