--- a/scripts/dpkg-safefilelist.1
+++ b/scripts/dpkg-safefilelist.1
@@ -23,7 +23,7 @@ This will find all files in the current directory, and sort them,
 printing symlinks after their targets.
 .SH BUGS?
 Successfully tested on
-.B Debian Linux 
+.B Debian GNU/Linux 
 systems only.
 .SH SEE ALSO
 .BR dpkg-deb (8),
