--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@ Sat Dec 25 04:04:48 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * dselect/pkgtop.cc: use waddnstr instead of waddch so we don't strip
     the 8th bit of characters
+  * Replace `Debian Linux' with `Debian GNU/Linux' in some more places
 
 Sat Dec 25 02:50:31 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
