--- a/split/dpkg-split.8
+++ b/split/dpkg-split.8
@@ -1,6 +1,6 @@
 .\" Hey, Emacs!  This is an -*- nroff -*- source file.
 .\" Authors: Ian Jackson
-.TH dpkg-split 1 "23rd June 1996" "Debian Linux"
+.TH dpkg-split 1 "23rd June 1996" "Debian GNU/Linux"
 .SH NAME
 dpkg\-split \- Debian package archive split/join tool
 .SH SYNOPSIS
