--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ Sat Dec 25 04:04:48 CET 1999 Wichert Akkerman <wakkerma@debian.org>
   * dselect/pkgtop.cc: use waddnstr instead of waddch so we don't strip
     the 8th bit of characters
   * Replace `Debian Linux' with `Debian GNU/Linux' in some more places
+  * Update Spanish translation
 
 Sat Dec 25 02:50:31 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
