--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@ Sat Dec 25 04:04:48 CET 1999 Wichert Akkerman <wakkerma@debian.org>
     the 8th bit of characters
   * Replace `Debian Linux' with `Debian GNU/Linux' in some more places
   * Update Spanish translation
+  * main/enquire.c: always use a minimum width of 80 in list1package
 
 Sat Dec 25 02:50:31 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
