--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Dec 26 01:31:08 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Update copyright for Swedish translation to SPI instead of Debian
+
 Sat Dec 25 04:04:48 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * dselect/pkgtop.cc: use waddnstr instead of waddch so we don't strip
