scripts/dpkg-buildpackage.sh: support debsign scripts/update-alternatives.8: fix wrong order of parameters in ACTION section Updated Polish translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Wed Jan  5 17:09:45 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * Merge patch from Tom Lees <tom@lpsg.demon.co.uk>:
+    + scripts/dpkg-buildpackage.sh: support debsign
+  * scripts/update-alternatives.8: fix wrong order of parameters
+    in ACTION section
+  * Updated Polish translation
+
 Sun Dec 26 01:31:08 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Update copyright for Swedish translation to SPI instead of Debian
