--- a/scripts/update-alternatives.8
+++ b/scripts/update-alternatives.8
@@ -239,7 +239,7 @@ Specifies the administrative directory, when this is to be
 different from the default.
 .SS ACTIONS
 .TP
-\fB--install\fR \fIgen link path pri\fR [\fB--slave\fR \fIsgen slink spath\fR] ...
+\fB--install\fR \fIlink gen path pri\fR [\fB--slave\fR \fIslink sgen spath\fR] ...
 Add a group of alternatives to the system.
 .I gen
 is the generic name for the master link,
