--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+dpkg (1.6.6) unstable; urgency=low
+
+  * dpkg-buildpackage supports debsign, Closes: Bug# 58333
+  * fix update-alternatives manpage, Closes: Bug# 53859
+  * Updated Polish translation
+
+ -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+
 dpkg (1.6.5) unstable; urgency=low
 
   * Update Spanish translation
