dselect/method.cc: pass admindir to dpkg dselect/Makefile.in: fix rule to build helpmessages dselect/curkeys.h: use curses.h instead of ncurses.h, since someone decided to play nasty and just remove that scripts/: remove dpkg-safelist dpkg-deb/build.c: remove dpkg-safelist calls main/enquiry.c: redo formula to get fieldwidths for packages

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Fri Jan  7 18:24:45 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * dselect/method.cc: pass admindir to dpkg
+  * dselect/Makefile.in: fix rule to build helpmessages
+  * dselect/curkeys.h: use curses.h instead of ncurses.h, since someone
+    decided to play nasty and just remove that
+  * scripts/: remove dpkg-safelist
+  * dpkg-deb/build.c: remove dpkg-safelist calls
+  * main/enquiry.c: redo formula to get fieldwidths for packages
+
 Wed Jan  5 17:09:45 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * Merge patch from Tom Lees <tom@lpsg.demon.co.uk>:
