--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,10 @@ dpkg (1.6.6) unstable; urgency=low
   * fix update-alternatives manpage, Closes: Bug#53859
   * Updated Polish translation
   * Pass admindir to dpkg, Closes: Bug#54039
+  * Fix dpkg -l output
+  * Remove dpkg-safelist again, it had issues
 
- -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+ -- Wichert Akkerman <wakkerma@debian.org>  Fri,  7 Jan 2000 19:51:45 +0100
 
 dpkg (1.6.5) unstable; urgency=low
 
