scripts/cl-debian.pl: Allow space between `#' and the bugnumber in the changelog scripts scripts/start-stop-daemon.c: test for __sparc__ instead scripts/Makefile.in: add optlib to CFLAGS utils/start-stop-daemon.c: add option to chroot first, patch from Marco d'Itri utils/start-stop-daemon.8: document chroot option dselect/pkgtop.cc: use waddnstr to print package description instead of waddch

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Sun Jan  9 01:40:23 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/cl-debian.pl: Allow space between `#' and the bugnumber in the
+    changelog scripts
+  * scripts/start-stop-daemon.c: test for __sparc__ instead
+  * scripts/Makefile.in: add optlib to CFLAGS
+  * utils/start-stop-daemon.c: add option to chroot first, patch from Marco d'Itri
+  * utils/start-stop-daemon.8: document chroot option
+  * dselect/pkgtop.cc: use waddnstr to print package description instead of waddch
+
 Fri Jan  7 18:24:45 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * dselect/method.cc: pass admindir to dpkg
