--- a/THANKS
+++ b/THANKS
@@ -29,6 +29,7 @@ Juergen Menden <menden@morgana.camelot.de>
 Juho Vuori <javuori@cc.helsinki.fi>
 Kim-Minh Kaplan <kkaplan@cdfhp3.in2p3.fr>
 Klee Dienes <klee@debian.org>
+Marco d'Itri <md@linux.it>
 Marcus Brinkmann <brinkmd@debian.org> 
 Masato Taruishi <taru@debian.or.jp>
 Matt Welsh <mdw@sunsite.unc.edu>
