--- a/utils/start-stop-daemon.8
+++ b/utils/start-stop-daemon.8
@@ -130,6 +130,12 @@ even if the `group' options is not specified. The group option is only for
 groups that the user isn't normally a member of (like adding per/process
 group membership for generic users like `nobody').
 .TP
+.I -r|--chroot root
+Chdir and chroot to
+.B root
+before starting the process. Please note that the pidfile is also written
+after the chroot.
+.TP
 .I -b|--background
 Typically used with programs that don't detach on their own. This option
 will force
