--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+dpkg (1.6.7) unstable; urgency=low
+
+  * start-stop-daemon can chroot now, Closes: Bug#54513
+  * Allow space between # and the bugnumber in the changelog
+  * Display package description with waddnstr, Closes: Bug#54313
+
+ -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+
 dpkg (1.6.6) unstable; urgency=low
 
   * dpkg-buildpackage supports debsign, Closes: Bug#58333
