various text and manpage updates dselect/method.cc: don't abort if locking fails but give a warning THANKS: fix various small errors

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Sun Jan  9 16:11:39 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * Merge patches from Josip Rodin:
+    + various text and manpage updates
+    + dselect/method.cc: don't abort if locking fails but give a
+      warning
+    + THANKS: fix various small errors 
+
 Sun Jan  9 01:40:23 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/cl-debian.pl: Allow space between `#' and the bugnumber in the
