--- a/THANKS
+++ b/THANKS
@@ -1,4 +1,4 @@
-Adam Heath <doogie<debian.org>
+Adam Heath <doogie@debian.org>
 Andrew Hobson <ahobson@eng.mindspring.net>
 Ben Collins <bcollins@debian.org>
 Branko Lankester
@@ -20,10 +20,8 @@ Ian Murdock <imurdock@debian.org>
 J.H.M. Dassen <jdassen@cistron.nl>
 Jim Pick <jim@jimpick.com>
 Jim Van Zandt <jrv@vanzandt.mv.com>
-Jim Van Zandt <jrv@vanzandt.mv.com>
 Joel Klecker <jk@espy.org>
-Josip Rodin <joy@cibalia.gkvk.hr>
-Juan Cespedes <cespedes@debian.org>
+Josip Rodin <jrodin@jagor.srce.hr>
 Juan Cespedes <cespedes@debian.org>
 Juergen Menden <menden@morgana.camelot.de>
 Juho Vuori <javuori@cc.helsinki.fi>
