--- a/doc/deb-old.5
+++ b/doc/deb-old.5
@@ -1,55 +1,55 @@
 .\" Hey, Emacs!  This is an -*- nroff -*- source file.
 .\" Author: Raul Miller, Ian Jackson
-.TH DEB-OLD 5  "1st July 1996" "Debian Project" "Debian GNU/Linux"
+.TH DEB-OLD 5 "January 2000" "Debian Project" "Debian GNU/Linux"
 .SH NAME 
-deb-old - Debian GNU/Linux binary package old style format
+deb-old \- old style Debian GNU/Linux binary package format
 .SH SYNOPSIS
 .IB filename .deb
 .SH DESCRIPTION
-Old style Debian binary package format.
-
 The
 .B .deb
-format is the Debian binary package file format.  The format has
-changed since Debian 0.93 and the new format is being phased in.
-
-The old format is described here.  Please see
+format is the Debian binary package file format.  This manual page
+describes the
+.B old
+format, used before Debian 0.93.  Please see
 .BR deb (5)
 for details of the new format.
 .SH FORMAT
 The file is two lines of format information as ASCII text, followed by
 two concatenated gzipped ustar files.
-
+.PP
 The first line is the format version number padded to 8 digits, and is
 .B 0.939000
 for all old-format archives.
-
+.PP
 The second line is a decimal string (without leading zeroes) giving
 the length of the first gzipped tarfile.
-
+.PP
 Each of these lines is terminated with a single newline character.
-
-The first tarfile contains the control information (see the
-.IR "dpkg Programmer's manual" )
-as a series of ordinary files.  The file
+.PP
+The first tarfile contains the control information, as a series of
+ordinary files, described in
+.IR "Debian Packaging Manual, section 2.2".
+The file
 .B control
-must be present, and contains the core control information.  The files
-in the control tarfile may optionally be in a
+must be present, as it contains the core control information.
+.PP
+In some very old archives, the files in the control tarfile may
+optionally be in a
 .B DEBIAN
-subdirectory in some very old archives - in this case the
+subdirectory. In that case, the
 .B DEBIAN
 subdirectory will be in the control tarfile too, and the control
 tarfile will have only files in that directory.  Optionally the
 control tarfile may contain an entry for
 .RB ` . ',
 that is, the current directory.
-
+.PP
 The second gzipped tarfile is the filesystem archive, containing
 pathnames relative to the root directory of the system to be installed
 on.  The pathnames do not have leading slashes.
-
 .SH SEE ALSO
 .BR deb (5),
-.BR deb\-control (5),
-.IR "dpkg Programmers' manual" ,
-.BR dpkg\-deb (8)
+.BR dpkg-deb (8),
+.BR deb-control (5),
+.IR "Debian Packaging Manual".
