Update Russian translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 Mon Jan 10 20:55:45 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
-  * Update Swedish translation
+  * Update Swedish and Russian translation
 
 Tue Jan 11 02:02:00 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
