--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,15 @@
-Mon Jan 10 20:55:45 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+Tue Jan 11 18:32:52 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
-  * Update Swedish and Russian translation
+  * configure.in: Fix include in test for alphasort 
+  * Makefile.in: add intl to subdirectory-list
+  * dpkg-deb/Makefile.in: set top_builddir
+  * dselect/Makefile.in: set top_builddir
+  * main/Makefile.in: set top_builddir
+  * lib/compat.c: add really simple snprintf (doesn't do range-checking)
+  * lib/compat.c: add sys_siglist
+  * configure.in: add tests for snprintf and sys_siglist
+  * include/dpkg.h.in: don't include sys/sysinfo.h, filesdb.c is the only
+    thing that needs it and it has its own include.
 
 Tue Jan 11 02:02:00 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
@@ -12,6 +21,10 @@ Tue Jan 11 02:02:00 CET 2000 Wichert Akkerman <wakkerma@debian.org>
   * dselect/main.cc: try to lock admindir instead of using readwrite
   * dselect/method.cc: switch to using fcntl for lock since that is more
     portable, and revamp lockingcode to reduce code duplication
+
+Mon Jan 10 20:55:45 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * Update Swedish and Russian translation
 
 Sun Jan  9 16:11:39 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
