Update Japanese manpages scripts/dpkg-genchanges.pl: also upload full source if version is *-0.1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Sat Jan 15 03:48:47 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * doc/ja/dpkg-deb.5: updated with patch from Hiroshi KISE <fuyuneko@ryukyu.ne.jp>
+  * THANKS: Add Hiroshi KISE
+
+Tue Jan 11 03:34:22 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-genchanges.pl: also upload full source if version is *-0.1
+  * doc/ja/dpkg.8: updated with patch from Hiroshi KISE <fuyuneko@ryukyu.ne.jp>
+
 Tue Jan 11 18:32:52 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * configure.in: Fix include in test for alphasort 
@@ -131,7 +141,7 @@ Wed Dec 22 12:07:40 CET 1999 Wichert Akkerman <wakkerma@debian.org>
   * dselect patches from Dan Gohman <gohmandj@mrs.umn.edu>:
     + dselect/pkgtop.cc: use ACS_HLINE instead of `-'
     + dselect/baselist.cc: change colour of column headings
-    + dselect: add a new --export mode which suppresses the display of the
+    + dselect: add a new --expert mode which suppresses the display of the
       helpscreen
 
 Tue Dec 21 15:59:35 CET 1999 Wichert Akkerman <wakkerma@debian.org>
