--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,11 @@
 dpkg (1.6.7) unstable; urgency=low
 
+  * dpkg compiles on HP-UX, Solaris and IRIX now
   * start-stop-daemon can chroot now, Closes: Bug#54513
   * Allow space between # and the bugnumber in the changelog
   * Display package description with waddnstr, Closes: Bug#54313
+  * Updated Japanese manpages, Closes: Bug#54690, #55080
+  * Upload full source for packages with version *-0.1, Closes: Bug#54651
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
