--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.6.7) unstable; urgency=low
+dpkg (1.6.7) frozen unstable; urgency=low
 
   * dpkg compiles on HP-UX, Solaris and IRIX now
   * start-stop-daemon can chroot now, Closes: Bug#54513
@@ -7,7 +7,7 @@ dpkg (1.6.7) unstable; urgency=low
   * Updated Japanese manpages, Closes: Bug#54690, #55080
   * Upload full source for packages with version *-0.1, Closes: Bug#54651
 
- -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+ -- Wichert Akkerman <wakkerma@debian.org>  Sun, 16 Jan 2000 18:36:10 +0100
 
 dpkg (1.6.6) unstable; urgency=low
 
