fix wrong test in dselect/Makefile.in

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+dpkg (1.6.8) unstable; urgency=low
+
+
+ -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+
 dpkg (1.6.7) frozen unstable; urgency=low
 
   * dpkg compiles on HP-UX, Solaris and IRIX now
