--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Jan 17 21:20:35 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * dselect/Makefile.in: not all shells support == for strings comparisons
+  * version-nr: update to 1.6.8
+
 Sat Jan 15 03:48:47 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * doc/ja/dpkg-deb.5: updated with patch from Hiroshi KISE <fuyuneko@ryukyu.ne.jp>
