Switch to using objdump in dpkg-shlibdeps

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@ Mon Jan 17 21:20:35 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * dselect/Makefile.in: not all shells support == for strings comparisons
   * version-nr: update to 1.6.8
+  * scripts/dpkg-shlibdeps.pl: update to version from dpkg_test_bz2_syslog_sigs
+    branch:
+    + use objdump instead of ldd
+	+ correct checks on shlibs.local
 
 Sat Jan 15 03:48:47 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
