scripts/controllib.pl: add comment with description of global variables scripts/dpkg-genchanges.pl: + add comment with description of global variables + Change Format number to 1.7 + `Maintainer' is now the actual maintainer as listed in control + add `Changed-By' field with maintainer as listed in changelog. Add -e   flag to override this value scripts/dpkg-buildpackage.sh: pass -e on to dpkg-genchanges scripts/dpkg-source.1: document new -e option, update copyright

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+Wed Jan 19 16:41:04 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/controllib.pl: add comment with description of global variables
+  * scripts/dpkg-genchanges.pl:
+    + add comment with description of global variables
+    + Change Format number to 1.7
+    + `Maintainer' is now the actual maintainer as listed in control
+    + add `Changed-By' field with maintainer as listed in changelog. Add -e
+      flag to override this value
+  * scripts/dpkg-buildpackage.sh: pass -e on to dpkg-genchanges
+  * scripts/dpkg-source.1: document new -e option, update copyright
+
 Mon Jan 17 21:20:35 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * dselect/Makefile.in: not all shells support == for strings comparisons
@@ -6,6 +18,11 @@ Mon Jan 17 21:20:35 CET 2000 Wichert Akkerman <wakkerma@debian.org>
     branch:
     + use objdump instead of ldd
 	+ correct checks on shlibs.local
+
+Sun Jan 16 22:07:12 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * main/dpkg.8: note that --force-overwrite is off by default
+  * po/.cvsignore: add all the .gmo files
 
 Sat Jan 15 03:48:47 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
