--- a/main/dpkg.8
+++ b/main/dpkg.8
@@ -377,10 +377,10 @@ If a conffile has been modified always choose the default action. If
 always default. If there is no default then we use the old or new
 version, depending on the option given.
 
-\fBoverwrite\fP(*):
+\fBoverwrite\fP:
 Overwrite one package's file with another's file.
 
-\fBoverwrite-dir\fP
+\fBoverwrite-dir\fP:
 Overwrite one package's directory with another's file.
 
 \fBoverwrite-diverted\fP:
