--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 dpkg (1.6.8) unstable; urgency=low
 
+  * fixed problems with multiple conflicts/replaces
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
