configure.in: don't try to outguess what CFLAGS should be scripts/update-alternatives.8: fix typo `Merge Marcus Brinkman patches day': + scripts/dpkg-architecture.pl: architecture -q should not imply -f + scripts/dpkg-shlibdeps.pl: build a list of packages instead of overwriting previous results. + utils/start-stop-daemon.c: update HURD specifics + configure.in: revamp HURD detection stuff + debian/rules: use dpkg-buildarchitecture to get proper info, set config_arg if we are crosscompiling + debian/rules: typo in clean target, scan start-stop-daemon for shlibdeps

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+Sat Feb 12 17:11:33 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * configure.in: don't try to outguess what CFLAGS should be
+  * scripts/update-alternatives.8: fix typo
+  * `Merge Marcus Brinkman patches day':
+    + scripts/dpkg-architecture.pl: architecture -q should not imply -f
+    + scripts/dpkg-shlibdeps.pl: build a list of packages instead of
+      overwriting previous results. 
+    + utils/start-stop-daemon.c: update HURD specifics
+    + configure.in: revamp HURD detection stuff
+    + debian/rules: use dpkg-buildarchitecture to get proper info,
+      set config_arg if we are crosscompiling
+    + debian/rules: typo in clean target, scan start-stop-daemon for
+      shlibdeps
+      
 Tue Feb  8 21:33:58 EST 2000 Ben Collins <bcollins@debian.org>
 
   * main/{processarc,archive}.c: Make the conflictor an array of structs and
