--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
-dpkg (1.6.8) unstable; urgency=low
+dpkg (1.7.0) unstable; urgency=low
 
-  * fixed problems with multiple conflicts/replaces
+  * Use objdump instead of ldd in dpkg-shlibdeps
+  * HURD updates, Closes: Bug#57753,#57754,#57755
+  * dpkg-architecture: -q should not imply -f, Closes: Bug# 57761
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
