--- a/scripts/update-alternatives.8
+++ b/scripts/update-alternatives.8
@@ -31,6 +31,7 @@ update-alternatives \- maintain symbolic links determining default commands
 .RI [ options ]
 .B --display
 .I name
+.PP
 .B update-alternatives
 .RI [ options ]
 .B --config
@@ -50,7 +51,7 @@ user has not specified a particular preference.
 .PP
 Debian's alternatives system aims to solve this problem.
 A generic name in the filesystem is
-shared by all files providing interchangable functionality.
+shared by all files providing interchangeable functionality.
 The alternatives system and the system administrator
 together determine which actual file is referenced by this generic name.
 For example, if the text editors
@@ -210,7 +211,6 @@ Any number of the common options may be specified together with any action.
 Generate more comments about what
 .B update-alternatives
 is doing.
-This option is not yet implemented.
 .TP
 .B --quiet
 Don't generate any comments unless errors occur.
