--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Feb 16 17:13:09 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * dselect/pkgtop.cc: flag two more strings as translateable
+
 Tue Feb 15 19:57:45 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * Merge the potato branch:
