--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Feb 17 22:01:38 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * doc/ja/dselect.8: Updated
+
 Wed Feb 16 17:13:09 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * dselect/pkgtop.cc: flag two more strings as translateable
