--- a/doc/ja/dselect.8
+++ b/doc/ja/dselect.8
@@ -1,3 +1,6 @@
+.\" Hey, Emacs!  This is an -*- nroff -*- source file.
+.TH DSELECT 8 "January 2000" "Debian Project" "Debian GNU/Linux"
+.\"original revision:1.2
 .\" Japanese Version Copyright (c) 1998 Koichi Sekido
 .\"         all rights reserved.
 .\" Translated Tue Aug  4 15:27:29 JST 1998
@@ -7,23 +10,15 @@
 .\" WORD:       user interface          ユーザインタフェース
 .\" WORD:       anonymous FTP           匿名 FTP
 .\"
-.TH DSELECT 8 "29th November 1995" "Debian Project" "Debian GNU/Linux"
 .\" .SH NAME
 .SH 名前
-.\" dselect \- a user tool to manage Debian GNU/Linux packages
-dselect \- Debian GNU/Linux のパッケージを管理するユーザツール
+.\" dselect \- console Debian package handling frontend
+dselect \- コンソール用 Debian パッケージ管理フロントエンド
 .\" .SH SYNOPSIS
 .SH 書式
-.\" .B dselect
-.\" [options]
-.\" .br
-.\" .B dselect
-.\" [options] action ...
 .B dselect
-[オプション]
-.br
-.B dselect
-[オプション] アクション ...
+[--admindir <directory>] [--help] [--version] [--licence | --license]
+[--expert] [--debug <file> | -D <file>] [\fI<action>\fP]
 .\" .SH DESCRIPTION
 .SH 説明
 .\" .B dselect
@@ -41,78 +36,93 @@ dselect \- Debian GNU/Linux のパッケージを管理するユーザツール
 のフロントエンドである。通常
 .B dselect
 は引数なしで起動されるが、指定可能なコマンドライン引数もある。
-
+.PP
 .\" The usage of
 .\" .B dselect
-.\" is pretty self-explanatory, and also an internal help-system is
-.\" included, which describes the keystrokes and some general concepts.
+.\" is pretty self-explanatory, and an internal help-system is included,
+.\" which describes the keystrokes and some general concepts.
 .\" .I Read the help.
 .B dselect
-の使い方は進めながら説明されるようになっている。キー操作と概要を示すヘル
+の使い方は、使用中に説明されるようになっている。キー操作と概要を示すヘル
 プも含まれている。
 .I ヘルプを読まれたい。
 .\" .SS ACTIONS
 .SS アクション
 .TP
-.B access, update, select, install, config, remove
-.\" These actions automatically selects corresponding commands from the main
-.\" menu, without even showing the main menu to you.
-これらのアクションは、それぞれに見合ったコマンドをメインメニューから自動
-的に選択する。メインメニューは表示されない。
+.B Access
+.\" Chooses an access `method' to use to find package repository. By default,
+.\" there exist several methods such as "floppy", "harddisk", "cdrom", but
+.\" other packages you install can provide additional methods, e.g. "apt"
+.\" or "multi_cd" etc.
+パッケージリポジトリを検索するために使用するアクセス「メソッド」を
+選択する。デフォルトでは "floppy"、"harddisk"、"cdrom" のようない
+くつかのメソッドが存在するが、追加パッケージをインストールすることに
+より、それ以外のメソッド(例えば、"apt" 等)が利用できるようになる。
 .TP
-.B quit
-.\" Do nothing but quit.
-何もせずに終了する。
+.B Update
+.\" Updates list of packages available to dpkg/dselect with data from the
+.\" chosen repository Packages file(s).
+選択したパッケージファイルリポジトリからのデータを取得して dpkg と
+dselect が利用するパッケージ一覧を更新する。
 .TP
-.B menu
-.\" Displays the default menu. This is equivalent to starting
-.\" .B dselect
-.\" with no parameters.
-デフォルトのメニューを表示する。これは
-.B dselect
-を引数なしで起動するのと同じことである。
-.\" .SS OPTIONS
-.SS オプション
+.B Select
+.\" Selects individual packages to install.
+インストールするパッケージを個別に選択する。
+.TP
+.B Install
+.\" Installs selected packages.
+選択したパッケージをインストールする。
+.TP
+.B Config
+.\" Configures any previously not configured packages.
+未設定のパッケージを設定する。
+.TP
+.B Remove
+.\" Removes or purges deselected packages.
+パッケージを削除(remove)、または完全削除(purge)する。
+.TP
+.B Quit
+.\" Exit dselect (successfully).
+dselect を終了する。
+.\" .SH OPTIONS
+.SH オプション
 .TP
 .\" .B --admindir <directory>
 .B --admindir <ディレクトリ>
-.\" Changes the directory where datafiles are located. This defaults to
-.\" .I /var/lib/dpkg.
-.\" Note, that these files are just some internal datafiles, actual Debian
-.\" packages doesn't have to be located here.
-データファイルが位置するディレクトリを変える。デフォルトは
+.\" Changes the directory where the dpkg `status', `available' and similar
+.\" files are located. This defaults to
+.\" .I /var/lib/dpkg
+.\" and normally there shouldn't be any need to change it.
+dpkg が使用する `status' ファイルや `available' ファイル等を置く
+ディレクトリを変更する。デフォルトでは
 .I /var/lib/dpkg
-である。これらのファイルは内部で使用されるデータファイルであり、実際の 
-Debian パッケージをここに置く必要はないことに注意されたい。
+であり、通常ではこれを変更する必要はない。
 .TP
 .\" .B --debug <file> | -D<file>
 .B --debug <ファイル> | -D<ファイル>
 .\" Turn on debugging. Debugging information is sent to
 .\" .I <file>.
-デバッギングを有効にする。デバッグ情報は
+デバッグを有効にする。デバッグ情報は
 .I <ファイル>
 に送られる。
 .TP
-.B --help
-.\" Print a brief help text.
-簡単なヘルプを表示する。
+.B --expert
+エキスパートモードを有効にする。
+冗長なヘルプメッセージを表示しない。
 .TP
-.B --licence
-.\" Print the licence of
-.\" .B dselect.
-.B dselect
-のライセンスを表示する。
+.B --help
+.\" Print a brief help text and exit successfully.
+簡単なヘルプを表示し、正常終了する。
+.TP
+.B --licence | --license
+.\" Displays the dselect copyright and license information and exits successfully.
+dselect のコピーライトとライセンス情報を表示し、正常終了する。
 .TP
 .B --version
-.\" Print version information.
-バージョン情報を表示する。
+.\" Print version information and exit successfully.
+バージョン情報を表示し、正常終了する。
 .\" .SH BUGS
 .SH バグ
-.\" This manpage doesn't document the options quite correctly, and has
-.\" formatting inconsistent with other manpages.
-このマニュアルページは必ずしもオプションを正確に記述していない。また他の
-マニュアルページとの間でフォーマットに矛盾がある。
-
 .\" The
 .\" .B dselect
 .\" package selection interface is confusing or even alarming to the new
@@ -120,32 +130,40 @@ Debian パッケージをここに置く必要はないことに注意されたい。
 .B dselect
 パッケージ選択のインタフェースは混乱を招きやすく、新しいユーザを不安にさ
 せることすらある。
-
-.\" There is no easy way automatically to download and install packages
-.\" via anonymous FTP.
-.\" （訳出せず）
+.sp
+.B dselect
+.\" doesn't handle Recommends: field very well, and doesn't understand
+.\" Replaces: at all.
+は、Recommends: フィールドをうまく取り扱えない。また、Replaces: を
+理解しない。
+.sp
+.\" There is no easy way to automatically download and install packages
+.\" via anonymous FTP with default access methods (APT does this).
+デフォルトのアクセスメソッドには、匿名 FTP によってパッケージを自動
+ダウンロード、インストールする簡単な方法がない
+(ATP ではこれが可能である)。
 .\" .SH SEE ALSO
 .SH 関連項目
-.B deb(5)
-,
-.B dpkg-deb(8)
-,
-.B dpkg(8)
-.\"and
-,
-.B deb-control(5)
-
-.\" .SH AUTHOR
+.BR dpkg (8),
+.BR deb (5).
+.\" .SH AUTHORS
 .SH 著者
-.\" .B dselect
-.\" was written by Ian Jackson (ijackson@gnu.ai.mit.edu).
-.\" This manual page is by Juho Vuori (javuori@cc.helsinki.fi).
 .B dselect
-は Ian Jackson (ijackson@gnu.ai.mit.edu) によって書かれた。このマニュア
-ルページは Juho Vuori (javuori@cc.helsinki.fi) の手による。
-
+.\" was written by Ian Jackson (ijackson@gnu.ai.mit.edu). Full list of
+.\" contributors may be found in `dselect --license'.
+は Ian Jackson (ijackson@gnu.ai.mit.edu) によって書かれた。
+このプログラムへの貢献者全一覧は `dselect --license' で参照できる。
+.br
+.\" This manual page was written by Juho Vuori <javuori@cc.helsinki.fi>
+.\" and updated by Josip Rodin.
+このマニュアルは Juho Vuori <javuori@cc.helsinki.fi> によって書かれ、
+Josip Rodin によって更新された。
+.B dselect
+は Ian Jackson (ijackson@gnu.ai.mit.edu) によって書かれた。
 .SH 翻訳者
 関戸 幸一 <sekido@mbox.kyoto-inet.or.jp>
+.br
+鍋谷 栄展 <nabe@debian.or.jp>
 
 .\" Local Variables:
 .\" mode: nroff
