utils/Makefile.in: fix link command for start-stop-daemon

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Feb 28 15:12:05 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * utils/Makefile.in: fix link command for start-stop-daemon
+
 Mon Feb 21 18:05:55 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * dselect/pkgsublist.cc: mark another string as translateable
