dselect/methkeys.cc: remove old bindings for `n\' and `p\', which frees `n\' to do searchagain

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Mar  2 17:03:04 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * dselect/methkeys.cc: remove old bindings for `n' and `p', which
+    frees `n' to do searchagain
+
 Mon Feb 28 15:12:05 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * utils/Makefile.in: fix link command for start-stop-daemon
