--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+Sat Mar  4 16:52:38 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * Synchronize with potato-branch again:
+  * debian/changelog: update to 1.6.10
+  * scripts/dpkg-divert.pl: reinstate last writeability-patch. Modified
+    to not abort on ENOENT: this indicates a directory does not (yet)
+    exist. If this happens don't try to rename.
+  * scripts/update-alternatives.pl:
+    + update usage-warning to reflect the new --config option
+    + Document some global variables
+    + Switch back to auto-mode when removing a manually selected alternative
+  * dselect/{dselect.h,main.cc,pkglist.cc}: remove CAN_RESIZE stuff
+  * dselect/methlist.cc: don't abort if getch fails due to interrupted syscall
+  * dselect/pkglist.cc: don't abort if getch fails due to interrupted syscall
+  * dselect/baselist.cc: put debug-statement in sigwinchhandler and
+    actually resize the current terminal before redisplaying the screen
+
 Thu Mar  2 17:03:04 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * dselect/methkeys.cc: remove old bindings for `n' and `p', which
