Synchronize to the potato branch again

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,14 @@ dpkg (1.7.0) unstable; urgency=low
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
+dpkg (1.6.11) frozen unstable; urgency=high
+
+  * Oops, missed one case where the libc/ncurses conflict reared its
+    ugly head and broke dselect miserably. 
+  * fix syntax error in dpkg-divert. Closes: Bug#60050
+
+ -- Wichert Akkerman <wakkerma@debian.org>  Fri, 10 Mar 2000 11:52:07 +1100
+
 dpkg (1.6.10) frozen unstable; urgency=low
 
   * The `it rains in Sydney' release
