--- a/TODO
+++ b/TODO
@@ -1,5 +1,19 @@
 
-* start-stop-daemon: write pidfile before we chroot?
+start-stop-daemon
+* write pidfile before we chroot?
+* capabilities support
+
+dpkg
+* configuration-file with default options
+* signatures & checksums
+* seperate maintainer and last-changed-by entries in .changes (should be done)
+* integrate debconf (add new status)
+* allow external program to specify how to handle conffiles
+* integrate suidmanager
+* log our actions
+
+dpkg-source
+* update format to handle multiple patches and tarballs
 
 ------------------------------------------------------------------------------
 
